<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo_caetaco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/pin_image"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/no_image" />

                <ImageView
                    android:id="@+id/download_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="225dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/pin_image"
                    app:layout_constraintStart_toStartOf="@+id/pin_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.969"
                    app:srcCompat="@drawable/download_green" />

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@android:color/transparent"
                    android:padding="1dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/go_back" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/coords"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="Coordenadas: "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/audio_button"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="280dp"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/audio_green2" />

            <TextView
                android:id="@+id/setLat"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-50dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="LATITUDE: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/setLng"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="LONGITUDE: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/setAlt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="ALTITUDE: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/audio"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:layout_marginTop="-30dp"
                android:text="TEXT"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/download_audio"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/download_green" />

            <TextView
                android:id="@+id/setPinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:text="@string/trail_name"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/trail_desc_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/setPinDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/trail_desc"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/premium_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center"
                    android:text="@string/premium_text"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp" >

                    <VideoView
                        android:id="@+id/videoView"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center" />


                </FrameLayout>

                <Button
                    android:id="@+id/play_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="80dp"
                    android:backgroundTint="@color/appColor"
                    android:textColor="@color/white"
                    android:text="PLAY" />

                <Button
                    android:id="@+id/download_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="-46dp"
                    android:backgroundTint="@color/appColor"
                    android:textColor="@color/white"
                    android:text="BAIXAR" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>